--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,700&family=Russo+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,700&family=Russo+One&display=swap"
+        rel="stylesheet">
     <title>Weather Application</title>
 </head>
+
 <body>
     <div class="bg-image"></div>
     <div class="container">
         <div class="search-box">
-            <button class="fa-solid fa-location-dot" id="location"></button> 
+            <button class="fa-solid fa-location-dot" id="location"></button>
             <input type="text" placeholder="Enter your location">
             <button class="fa-solid fa-magnifying-glass" id="search"></button>
         </div>
@@ -29,7 +32,7 @@
             <p class="description"></p>
             <p class="time"></p>
         </div>
-        
+
         <div class="weather-details">
             <div class="humidity">
                 <i class="fa-solid fa-water"></i>
@@ -47,8 +50,10 @@
             </div>
         </div>
 
-
     </div>
+    <footer class="footer">
+        <p>© 2024 Ayturul Yumer. All Rights Reserved.</p>
+    </footer>
     <script src="https://kit.fontawesome.com/6520d04a2c.js" crossorigin="anonymous"></script>
     <script src="app.js" type="module"></script
 </body>
